--- a/client/index.html
+++ b/client/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./styles.css" />
-        <title>Rate Limiter</title>
-    </head>
-    <body>
-        <button onclick="onClick()">Click</button>
-    </body>
-
-    <script>
-        async function onClick() {
-            const res = await fetch("http://localhost:3000/limit");
-            const data = await res.json();
-            console.log(data);
-        }
-    </script>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
